--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-apollo": "^2.0.1",
     "react-native": "0.50.3",
     "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "^1.0.0-beta.21"
+    "react-navigation": "^1.0.0-beta.21",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
