--- a/app.json
+++ b/app.json
@@ -1,5 +1,20 @@
 {
   "expo": {
-    "sdkVersion": "23.0.0"
+    "sdkVersion": "23.0.0",
+    "orientation": "portrait",
+    "name": "FlashCard",
+    "description": "FlashCard game to help learn.",
+    "slug": "gusbru",
+    "version": "1.0",
+    "icon": "./icons/flashcard.png",
+    "notification": {
+      "icon": "./icons/flashcard.png"
+    },
+    "ios": {
+     "bundleIdentifier": "org.gusbru.nanodegree.udacity"
+    },
+    "android": {
+     "package": "org.gusbru.nanodegree.udacity"
+    }
   }
 }
